# coin_surfer

./: .gitignore  3d_surface_params.py  README.md  heatmap.py  plot_data.py  populate_data.py  pyproject.toml
api/: README.md  kill_flask.sh  logger.py  pyproject.toml  run_serv.sh  run_server.py  test_health.sh
api/clients/: coinbase.py
api/controllers/: trading.py
api/managers/: strategy.py
api/server/: app.py
api/server/controllers/: health.py  portfolio.py
api/server/services/: portfolio.py
api/spec/src/main/: _api.yml
src/: error.py  utils.py
trading/src/agent/: parameter_grid.py  utils.py
trading/src/agent/strategy/: base.py
